[gd_scene load_steps=3 format=2]

[ext_resource path="res://ressources/script/uth/components/combo_box.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.858824, 0.858824, 0.858824, 1 )

[node name="combo_box" type="Control"]
anchor_right = 0.339
anchor_bottom = 0.083
margin_left = 71.0
margin_top = 103.0
margin_right = 70.864
margin_bottom = 103.2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}
_does_user_can_add_item = true

[node name="text_edit" type="TextEdit" parent="."]
anchor_right = 1.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = "hello"

[node name="panel_context" type="Panel" parent="."]
anchor_top = 0.339
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 4.05
margin_right = -1.0
margin_bottom = 4.13801
custom_styles/panel = SubResource( 1 )

[node name="vbox_containers" type="VBoxContainer" parent="panel_context"]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="text_changed" from="text_edit" to="." method="_on_text_edit_text_changed"]
